Add tests for all modules