@@ -1,11 +1,12 @@
 package org.example.reader.impl;
 
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
 import org.example.entity.IntegerArray;
 import org.example.exception.ArrayValidationException;
 import org.example.factory.IntegerArrayFactory;
 import org.example.parser.ArrayParser;
 import org.example.reader.ArrayFileReader;
-import org.example.validator.ArrayValidator;
 
 import java.io.IOException;
 import java.nio.file.Files;
@@ -16,20 +17,25 @@ import java.util.List;
 
 public class ArrayFileReaderImpl implements ArrayFileReader {
 
-    private final ArrayValidator validator;
+    private static final Logger logger = LogManager.getLogger(ArrayFileReaderImpl.class);
+
     private final ArrayParser parser;
     private final IntegerArrayFactory factory;
 
-    public ArrayFileReaderImpl(ArrayValidator validator,
-                           ArrayParser parser,
-                           IntegerArrayFactory factory) {
-        this.validator = validator;
+    public ArrayFileReaderImpl(ArrayParser parser,
+                               IntegerArrayFactory factory) {
         this.parser = parser;
         this.factory = factory;
     }
 
     @Override
     public List<IntegerArray> readAllArrays(String filePath) throws ArrayValidationException {
+        logger.info("Reading arrays from file: {}", filePath);
+
+        if (filePath == null || filePath.trim().isEmpty()) {
+            throw new ArrayValidationException("File path cannot be null or empty");
+        }
+
         List<IntegerArray> arrays = new ArrayList<>();
         List<String> lines = readLinesFromFile(filePath);
 
@@ -37,38 +43,42 @@ public class ArrayFileReaderImpl implements ArrayFileReader {
             IntegerArray array = processLine(line);
             if (array != null) {
                 arrays.add(array);
+                logger.debug("Added array with id: {}", array.getId());
             }
         }
 
+        logger.info("Successfully read {} arrays from file", arrays.size());
         return arrays;
     }
 
     private List<String> readLinesFromFile(String filePath) throws ArrayValidationException {
+        logger.debug("Reading lines from file: {}", filePath);
+
         Path path = Paths.get(filePath);
 
         if (!Files.exists(path)) {
+            logger.error("File not found: {}", filePath);
             throw new ArrayValidationException("File not found: " + filePath);
         }
 
         try {
             return Files.readAllLines(path);
         } catch (IOException e) {
+            logger.error("IO error while reading file: {}", filePath, e);
             throw new ArrayValidationException("Error reading file: " + filePath, e);
         }
     }
 
     private IntegerArray processLine(String line) throws ArrayValidationException {
-        if (line == null || line.trim().isEmpty()) {
+        if (line == null || line.isBlank()) {
+            logger.debug("Empty line, skipping");
             return null;
         }
 
-        if (!validator.isValidLine(line)) {
-            return null;
-        }
-
-        List<Integer> numbers = parser.parseLine(line);
+        List<Integer> numbers = parser.parseLine(line.trim());
 
         if (numbers.isEmpty()) {
+            logger.debug("No numbers parsed from line, skipping: {}", line);
             return null;
         }
 
